--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -70,7 +70,7 @@ h1{
   font-size: 60px;
   font-weight: 500;
   letter-spacing: 3px;
-  color: black;
+  color: $base3;
 }
 h2{
   font-family: 'Roboto';
