--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -15,10 +15,15 @@
   .profile
     .profile__hedding
       %h1 PROFILE
-    .profile__topText
-      2020年。エンジニア転職を決意しプログラミング学習に取り組んできました。
-      %br 実務経験はまだありませんが、現時点での "オカヤマ カナタ" のスキルです。
-    .profile__tables
+    .profile__main
+      .profile__main__imageWrapper
+      .profile__main__btnNext
+        =fa_icon "long-arrow-right"
+      .profile__main__btnPrev
+        =fa_icon "long-arrow-left"
+      %ul.profile__main__textHeader
+        %li ABOUT ME
+    -# .profile__tables
       %table
         %tr
           %th KANATA OKAYAMA
@@ -50,7 +55,7 @@
         %tr
           %td 　FASSION
           %td 衣食住。完全に衣に振り切っています。
-    .profile__moreBtn
+    -# .profile__moreBtn
       =link_to(profiles_path) do
         .profile__moreBtn--text.linkBtn
           %h2 SHOW MORE
