--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -17,38 +17,93 @@
       %h1 PROFILE
     .profile__main
       .profile__main__imageWrapper
-      .profile__main__btnNext
+      .profile__main__btn.next
         =fa_icon "long-arrow-right"
-      .profile__main__btnPrev
+      .profile__main__btn.prev
         =fa_icon "long-arrow-left"
       %ul.profile__main__textHeader
+        %li ABOUT ME
         %li CARRER
+        %li EXPERIENCE
+        %li HOBBY
       %ul.profile__main__lowerBox
         %li.profile__main__lowerBox__wrapper
-          .profile__main__lowerBox__wrapper__introduce
-            .profile__main__lowerBox__wrapper__introduce--heading
-              同志社大学
-              %br 心理学部心理学科卒業
-              %span 2018
-            .profile__main__lowerBox__wrapper__introduce--text
+          .profile__main__lowerBox__wrapper__introduceA1
+            .profile__main__lowerBox__wrapper__introduceA1--heading
+              岡山 叶太
+              %br 
+              %span 1992.06.09
+            .profile__main__lowerBox__wrapper__introduceA1--text
               自らの主張や論理を組み立てる力、現象を客観的に観察・分析する力、そして、得られた実証データについて主体的に発信する力を身につけました。
-          .profile__main__lowerBox__wrapper__introduce
-            .profile__main__lowerBox__wrapper__introduce--heading
-              日本郵便株式会社
-              %br 窓口職員として入社
+          .profile__main__lowerBox__wrapper__introduceA2
+            .profile__main__lowerBox__wrapper__introduceA2--heading
+              日本郵便株式会社 入社
               %span 2018 - 2020
-            .profile__main__lowerBox__wrapper__introduce--text
+            .profile__main__lowerBox__wrapper__introduceA2--text
               郵便局の窓口職員として、郵便・銀行・保険の3事業に幅広く従事していました。いずれも、些細なミスも許されない環境でスピーディーな仕事を求められました。
-          .profile__main__lowerBox__wrapper__introduce
-            .profile__main__lowerBox__wrapper__introduce--heading
-              エンジニア転職を志し
-              %br TECH::CAMPにて学習を開始
+        %li.profile__main__lowerBox__wrapper
+          .profile__main__lowerBox__wrapper__introduceB1
+            .profile__main__lowerBox__wrapper__introduceB1--heading
+              同志社大学心理学部 卒業
+              %br 
+              %span 2018
+            .profile__main__lowerBox__wrapper__introduceB1--text
+              心理学実験、そしてそのデータの分析を繰り返す中で、自らの主張や論理を組み立てる力、現象を客観的に観察・分析する力、そして、得られた実証データについて主体的に発信する力を身につけました。
+          .profile__main__lowerBox__wrapper__introduceB2
+            .profile__main__lowerBox__wrapper__introduceB2--heading
+              日本郵便株式会社 入社
+              %br
+              %span 2018 - 2020
+            .profile__main__lowerBox__wrapper__introduceB2--text
+              郵便局の窓口職員として、郵便・銀行・生命保険の3事業の事務および営業に幅広く従事していました。いずれも、100％の正確さとスピーディーな作業効率の両立が求められる仕事でした。
+          .profile__main__lowerBox__wrapper__introduceB3
+            .profile__main__lowerBox__wrapper__introduceB3--heading
+              TECH::CAMP にて学習開始
+              %br
               %span 2020
-            .profile__main__lowerBox__wrapper__introduce--text
+            .profile__main__lowerBox__wrapper__introduceB3--text
+              お客様に提供する"モノ"を「自らの手で創り上げたい」という想いのもと、エンジニアとして生きることを決意いたしました。新しい技術を知ることに喜びを感じながら、日々の学習に励んでいます。
+        %li.profile__main__lowerBox__wrapper
+          .profile__main__lowerBox__wrapper__introduceB1
+            .profile__main__lowerBox__wrapper__introduceB1--heading
+              志塾フリースクール
+              %br
+              %span 2012 - 2016
+            .profile__main__lowerBox__wrapper__introduceB1--text
+              自らの主張や論理を組み立てる力、現象を客観的に観察・分析する力、そして、得られた実証データについて主体的に発信する力を身につけました。
+          .profile__main__lowerBox__wrapper__introduceB2
+            .profile__main__lowerBox__wrapper__introduceB2--heading
+              STERBACKS COFFEE
+              %br
+              %span 2013 - 2017
+            .profile__main__lowerBox__wrapper__introduceB2--text
+              郵便局の窓口職員として、郵便・銀行・保険の3事業に幅広く従事していました。いずれも、些細なミスも許されない環境でスピーディーな仕事を求められました。
+          .profile__main__lowerBox__wrapper__introduceB3
+            .profile__main__lowerBox__wrapper__introduceB3--heading
+              MONDIAL KAFFEE328
+              %br 
+              %span 2014 -
+            .profile__main__lowerBox__wrapper__introduceB3--text
+              「自らの手で創り上げたい」という想いのもと、エンジニアとして生きることを決意いたしました。日々の学習が、「楽しい」と感じることができています。
+        %li.profile__main__lowerBox__wrapper
+          .profile__main__lowerBox__wrapper__introduceB1
+            .profile__main__lowerBox__wrapper__introduceB1--heading
+              COFFEE
+            .profile__main__lowerBox__wrapper__introduceB1--text
+              自らの主張や論理を組み立てる力、現象を客観的に観察・分析する力、そして、得られた実証データについて主体的に発信する力を身につけました。
+          .profile__main__lowerBox__wrapper__introduceB2
+            .profile__main__lowerBox__wrapper__introduceB2--heading
+              CAMERA
+            .profile__main__lowerBox__wrapper__introduceB2--text
+              郵便局の窓口職員として、郵便・銀行・保険の3事業に幅広く従事していました。いずれも、些細なミスも許されない環境でスピーディーな仕事を求められました。
+          .profile__main__lowerBox__wrapper__introduceB3
+            .profile__main__lowerBox__wrapper__introduceB3--heading
+              FASHION
+            .profile__main__lowerBox__wrapper__introduceB3--text
               「自らの手で創り上げたい」という想いのもと、エンジニアとして生きることを決意いたしました。日々の学習が、「楽しい」と感じることができています。
       %ul.profile__main__circleBox
         %li.profile__main__circleBox--circle
-        %li.profile__main__circleBox--circle.active
+        %li.profile__main__circleBox--circle
         %li.profile__main__circleBox--circle
         %li.profile__main__circleBox--circle
   -# skills================================================
