profile contents done

--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -61,6 +61,7 @@
       width: 28vh;
     }
     &__btn{
+      cursor: pointer;
       border: solid 1px $base1;
       border-radius: 50%;
       height: 8vh;
