--- a/app/views/contents/_profile.html.haml
+++ b/app/views/contents/_profile.html.haml
@@ -1,9 +1,10 @@
 .profile__main
   .profile__main__imageWrapper
+    =image_tag("face.jpg")
   .profile__main__btn.next
-    =fa_icon "long-arrow-right"
+    =fa_icon("long-arrow-right")
   .profile__main__btn.prev
-    =fa_icon "long-arrow-left"
+    =fa_icon("long-arrow-left")
   %ul.profile__main__textHeader
     %li ABOUT ME
     %li CARRER
