--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -46,6 +46,7 @@
 // main------------------------------------------------
   &__main{
     background-color: $base3;
+    margin-bottom: 10vh;
     border-radius: 20px;
     width: 100%;
     height: 70vh;
@@ -190,141 +191,21 @@
 }
 // slills================================================================================================
 .skills{
-  padding-top: 8vh;
+  width:90vw;
   margin: 0 auto;
   &__hedding{
-    width: 80vw;
-    margin: 0 auto;
-    height: 6vh;
+    width: 100%;
+    height: 15vh;
+    line-height: 15vh;
     font-size: 5vh;
-    line-height: 6vh;
-    margin-bottom: 5vh;
-  }
-  &__topText{
-    width: 80vw;
-    margin: 0 auto 3vh;
-    line-height: 4vh;
-    font-size: 2vh;
   }
 // ------------------------------------------------
-  &__wrapper{
-    width: 80vw;
-    margin: 0 auto;
-    display: flex;
-      justify-content: space-between;
-// ------------------------------------------------
-    &__left{
-      // background-color: gray;
-      width: 50%;
-      &__category{
-        // background-color: red;
-        width: 100%;
-        height: 8vh;
-        margin: 1vh 0;
-        position: relative;
-        &--icon{
-          position: absolute;
-            top: 50%;
-            left: 8%;
-            transform: translateX(-50%)translateY(-50%);
-          border-radius: 50%;
-          width: 7vh;
-          height: 7vh;
-          transition-duration: 0.5s;
-          img{
-            @include position-center;
-            filter: brightness(0) invert(0.5);
-            transition-duration: 0.5s;
-          }
-        }
-        &--name{
-          position: absolute;
-            top: 50%;
-            left: 18%;
-            transform: translateY(-50%);
-          line-height: 10vh;
-          // background-color:blue;
-          width: 70%;
-          height: 10vh;
-        }
-      }
-    }
-// links------------------------------------------------
-    &__right{
-      margin:2.5vh 0;
-      width: 50%;
-      position: relative;
-      .skillsUnderLine{
-        position: absolute;
-          bottom: 0;
-          z-index: 1;
-        background-color: black;
-        height: 100%;
-      }
-      &__info{
-        display:none;
-        padding-bottom: 5vh;
-        &--name{
-          // background-color: red;
-          width: 100%;
-          height: 10vh;
-          line-height: 10vh;
-          padding-left: 5%;
-          h1{
-            color: white;
-          }
-        }
-        &--text{
-          // background-color: pink;
-          padding-left: 15%;
-          width: 100%;
-          height: 5vh;
-          line-height: 5vh;
-        }
-      }
-      &__linkBox{
-        // background-color: gray;
-        width: 100%;
-        height: 7.5vh;
-        position: relative;
-        padding-left:6%;
-        margin: 2vh 0;
-        &__nameBox{
-          // background-color: green;
-          width: 100%;
-          height: 4.5vh;
-          line-height: 4.5vh;
-          position: relative;
-          &--circle{
-            background-color: black;
-            border-radius: 50%;
-            width: 1.5vh;
-            height: 1.5vh;
-            position: absolute;
-              top: 50%;
-              left: -3%;
-              transform: translateY(-50%)translateX(-50%);
-          }
-        }
-        &--text{
-          // background-color: blue;
-          width: 100%;
-          height: 3vh;
-          line-height: 3vh;
-        }
-        &__moreBtn{
-          // background-color: red;
-          width:18vw;
-          height: 7.5vh;
-          position: absolute;
-            bottom: 0;
-            right: 3%;
-          i{
-            -webkit-text-stroke: 3.5px lightgray;
-          }
-        }
-      }
-    }
+  &__main{
+    background-color: $base3;
+    border-radius: 20px;
+    width: 100%;
+    height: 70vh;
+    position: relative;
   }
 }
 // works================================================================================================
