upload svg file

--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -1,1 +1,37 @@
-.profile__main
+.skills__main
+  .skills__main__upperBlock
+    .skills__main__upperBlock__contentBox
+      .skills__main__upperBlock__contentBox--icon
+        =embedded_svg('icons/ruby.svg',class:"svgIcon")
+      .skills__main__upperBlock__contentBox--name
+        %h2 ruby
+    .skills__main__upperBlock__contentBox
+      .skills__main__upperBlock__contentBox--icon
+        -# =image_tag('icons/ruby_rough.png')
+      .skills__main__upperBlock__contentBox--name
+        %h2 ruby
+    .skills__main__upperBlock__contentBox
+      .skills__main__upperBlock__contentBox--icon
+        -# =image_tag('icons/ruby_rough.png')
+      .skills__main__upperBlock__contentBox--name
+        %h2 ruby
+    .skills__main__upperBlock__contentBox
+      .skills__main__upperBlock__contentBox--icon
+        -# =image_tag('icons/ruby_rough.png')
+      .skills__main__upperBlock__contentBox--name
+        %h2 ruby
+    .skills__main__upperBlock__contentBox
+      .skills__main__upperBlock__contentBox--icon
+        -# =image_tag('icons/ruby_rough.png')
+      .skills__main__upperBlock__contentBox--name
+        %h2 ruby
+    .skills__main__upperBlock__contentBox
+      .skills__main__upperBlock__contentBox--icon
+        -# =image_tag('icons/ruby_rough.png')
+      .skills__main__upperBlock__contentBox--name
+        %h2 ruby
+    .skills__main__upperBlock__contentBox
+      .skills__main__upperBlock__contentBox--icon
+        -# =image_tag('icons/ruby_rough.png')
+      .skills__main__upperBlock__contentBox--name
+        %h2 ruby
