--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -206,6 +206,43 @@
     width: 100%;
     height: 70vh;
     position: relative;
+    &__upperBlock{
+      // background-color: red;
+      position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translateX(-50%);
+      width: 72vw;
+      overflow-x: scroll;
+      overflow-y: hidden;
+      white-space: nowrap;
+      &__contentBox{
+        display: inline-block;
+        // background-color: white;
+        width: 13vw;
+        margin-right: 1vw;
+        &--icon{
+          background-color: $base1;
+          border-radius: 50%;
+          margin: 0 auto;
+          width: 10vw;
+          height: 10vw;
+          position: relative;
+          .svgIcon{
+            @include position-center;
+            width: 30%;
+            fill: $base3;
+          }
+        }
+        &--name{
+          // background-color: gray;
+          width: 13vw;
+          height: 5vh;
+          line-height: 5vh;
+          text-align: center;
+        }
+      }
+    }
   }
 }
 // works================================================================================================
