delete fill and size set

--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -7,7 +7,7 @@
         %h2 ruby
     .skills__main__upperBlock__contentBox
       .skills__main__upperBlock__contentBox--icon
-        -# =image_tag('icons/ruby_rough.png')
+        =embedded_svg('icons/ror.svg',class:"svgIcon")
       .skills__main__upperBlock__contentBox--name
         %h2 ruby
     .skills__main__upperBlock__contentBox
