--- a/app/views/contents/_form.html.haml
+++ b/app/views/contents/_form.html.haml
@@ -5,6 +5,9 @@
         .top__left--topImage
           %p トップ画像
           = f.file_field :topImage
+        .top__left--date
+          %p トップテキスト
+          = f.date_field :date 
         .top__left--topText
           %p トップテキスト
           = f.text_area :topText ,placeholder:"トップテキスト"
