delete extra files

--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -1,37 +1,9 @@
 .skills__main
-  .skills__main__upperBlock
-    .skills__main__upperBlock__contentBox
-      .skills__main__upperBlock__contentBox--icon
-        =embedded_svg('icons/ruby.svg',class:"svgIcon")
-      .skills__main__upperBlock__contentBox--name
-        %h2 ruby
-    .skills__main__upperBlock__contentBox
-      .skills__main__upperBlock__contentBox--icon
-        =embedded_svg('icons/ror.svg',class:"svgIcon")
-      .skills__main__upperBlock__contentBox--name
-        %h2 ruby
-    .skills__main__upperBlock__contentBox
-      .skills__main__upperBlock__contentBox--icon
-        -# =image_tag('icons/ruby_rough.png')
-      .skills__main__upperBlock__contentBox--name
-        %h2 ruby
-    .skills__main__upperBlock__contentBox
-      .skills__main__upperBlock__contentBox--icon
-        -# =image_tag('icons/ruby_rough.png')
-      .skills__main__upperBlock__contentBox--name
-        %h2 ruby
-    .skills__main__upperBlock__contentBox
-      .skills__main__upperBlock__contentBox--icon
-        -# =image_tag('icons/ruby_rough.png')
-      .skills__main__upperBlock__contentBox--name
-        %h2 ruby
-    .skills__main__upperBlock__contentBox
-      .skills__main__upperBlock__contentBox--icon
-        -# =image_tag('icons/ruby_rough.png')
-      .skills__main__upperBlock__contentBox--name
-        %h2 ruby
-    .skills__main__upperBlock__contentBox
-      .skills__main__upperBlock__contentBox--icon
-        -# =image_tag('icons/ruby_rough.png')
-      .skills__main__upperBlock__contentBox--name
-        %h2 ruby
+  %ul.skills__main__upperBlock
+    -@categories.each do |skill|
+      %li.skills__main__upperBlock__contentBox
+        .skills__main__upperBlock__contentBox--icon
+          =embedded_svg(skill.icon,class:"svgIcon")
+        .skills__main__upperBlock__contentBox--name
+          %h2=skill.name
+
