--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -6,4 +6,32 @@
           =embedded_svg(skill.icon,class:"svgIcon")
         .skills__main__upperBlock__contentBox--name
           %h2=skill.name
-
+  .skills__main__lowerBlock
+    .skills__main__lowerBlock--heading
+      %h2 THE OTHERS
+    .skills__main__lowerBlock__contentBox
+      .skills__main__lowerBlock__contentBox__content
+        .skills__main__lowerBlock__contentBox__content--icon
+          =embedded_svg("icons/database.svg",class:"svgIcon")
+        .skills__main__lowerBlock__contentBox__content--name
+          %h2 SQL
+      .skills__main__lowerBlock__contentBox__content
+        .skills__main__lowerBlock__contentBox__content--icon
+          =embedded_svg("icons/git.svg",class:"svgIcon")
+        .skills__main__lowerBlock__contentBox__content--name
+          %h2 GIT
+      .skills__main__lowerBlock__contentBox__content
+        .skills__main__lowerBlock__contentBox__content--icon
+          =embedded_svg("icons/terminal.svg",class:"svgIcon")
+        .skills__main__lowerBlock__contentBox__content--name
+          %h2 TERMINAL
+      .skills__main__lowerBlock__contentBox__content
+        .skills__main__lowerBlock__contentBox__content--icon
+          =embedded_svg("icons/trello.svg",class:"svgIcon")
+        .skills__main__lowerBlock__contentBox__content--name
+          %h2 TRELLO
+      .skills__main__lowerBlock__contentBox__content
+        .skills__main__lowerBlock__contentBox__content--icon
+          =embedded_svg("icons/visualstudio.svg",class:"svgIcon")
+        .skills__main__lowerBlock__contentBox__content--name
+          %h2 VS CODE
