--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -204,7 +204,7 @@
     background-color: $base3;
     border-radius: 20px;
     width: 100%;
-    height: 70vh;
+    height: 65vh;
     position: relative;
     &__upperBlock{
       // background-color: red;
@@ -213,12 +213,12 @@
         left: 50%;
         transform: translateX(-50%);
       width: 72vw;
+      height: 26vh;
       overflow-x: scroll;
       overflow-y: hidden;
       white-space: nowrap;
       &__contentBox{
         display: inline-block;
-        // background-color: white;
         width: 13vw;
         margin-right: 1vw;
         &--icon{
@@ -235,11 +235,53 @@
           }
         }
         &--name{
-          // background-color: gray;
           width: 13vw;
           height: 5vh;
           line-height: 5vh;
           text-align: center;
+        }
+      }
+    }
+    &__lowerBlock{
+      position: absolute;
+        bottom: 10%;
+        left: 15%;
+      // background-color: white;
+      width:20%;
+      &--heading{
+        // background-color: gray;
+        height: 8vh;
+        line-height: 8vh;
+      }
+      &__contentBox{
+        display: flex;
+        &__content{
+          // background-color: red;
+          width: 100%;
+          height: 10vh;
+          position: relative;
+          &--icon{
+            height: 5vh;
+            width: 5vh;
+            margin: 0 auto;
+            border-radius: 50%;
+            background-color: $base2;
+            position: relative;
+            .svgIcon{
+              @include position-center;
+              width: 50%;
+              fill: $base3;
+            }
+          }
+          &--name{
+            display: none;
+            position: absolute;
+              top: 6vh;
+              left: 50%;
+              transform: translateX(-50%);
+            text-align: center;
+            width: 4vw;
+          }
         }
       }
     }
