--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -7,31 +7,61 @@
         .skills__main__upperBlock__contentBox--name
           %h2=skill.name
   .skills__main__lowerBlock
-    .skills__main__lowerBlock--heading
+    .skills__main__lowerBlock--name
+      %h1 RUBY
+    .skills__main__lowerBlock__content
+      .skills__main__lowerBlock__content--leftCircle
+      .skills__main__lowerBlock__content--centerName
+        furima
+      .skills__main__lowerBlock__content__rightBtn
+        %h2.skills__main__lowerBlock__content__rightBtn--text 
+          SHOW MORE
+        .skills__main__lowerBlock__content__rightBtn--icon 
+          =fa_icon "long-arrow-right"
+    .skills__main__lowerBlock__content
+      .skills__main__lowerBlock__content--leftCircle
+      .skills__main__lowerBlock__content--centerName
+        AAAAA
+      .skills__main__lowerBlock__content__rightBtn
+        %h2.skills__main__lowerBlock__content__rightBtn--text 
+          SHOW MORE
+        .skills__main__lowerBlock__content__rightBtn--icon 
+          =fa_icon "long-arrow-right"
+    .skills__main__lowerBlock__content
+      .skills__main__lowerBlock__content--leftCircle
+      .skills__main__lowerBlock__content--centerName
+        BBBBB
+      .skills__main__lowerBlock__content__rightBtn
+        %h2.skills__main__lowerBlock__content__rightBtn--text 
+          SHOW MORE
+        .skills__main__lowerBlock__content__rightBtn--icon 
+          =fa_icon "long-arrow-right"
+  .skills__main__otherBlock
+    .skills__main__otherBlock--heading
       %h2 THE OTHERS
-    .skills__main__lowerBlock__contentBox
-      .skills__main__lowerBlock__contentBox__content
-        .skills__main__lowerBlock__contentBox__content--icon
+    .skills__main__otherBlock__contentBox
+      .skills__main__otherBlock__contentBox__content
+        .skills__main__otherBlock__contentBox__content--icon
           =embedded_svg("icons/database.svg",class:"svgIcon")
-        .skills__main__lowerBlock__contentBox__content--name
+        .skills__main__otherBlock__contentBox__content--name
           %h2 SQL
-      .skills__main__lowerBlock__contentBox__content
-        .skills__main__lowerBlock__contentBox__content--icon
+      .skills__main__otherBlock__contentBox__content
+        .skills__main__otherBlock__contentBox__content--icon
           =embedded_svg("icons/git.svg",class:"svgIcon")
-        .skills__main__lowerBlock__contentBox__content--name
+        .skills__main__otherBlock__contentBox__content--name
           %h2 GIT
-      .skills__main__lowerBlock__contentBox__content
-        .skills__main__lowerBlock__contentBox__content--icon
+      .skills__main__otherBlock__contentBox__content
+        .skills__main__otherBlock__contentBox__content--icon
           =embedded_svg("icons/terminal.svg",class:"svgIcon")
-        .skills__main__lowerBlock__contentBox__content--name
+        .skills__main__otherBlock__contentBox__content--name
           %h2 TERMINAL
-      .skills__main__lowerBlock__contentBox__content
-        .skills__main__lowerBlock__contentBox__content--icon
+      .skills__main__otherBlock__contentBox__content
+        .skills__main__otherBlock__contentBox__content--icon
           =embedded_svg("icons/trello.svg",class:"svgIcon")
-        .skills__main__lowerBlock__contentBox__content--name
+        .skills__main__otherBlock__contentBox__content--name
           %h2 TRELLO
-      .skills__main__lowerBlock__contentBox__content
-        .skills__main__lowerBlock__contentBox__content--icon
+      .skills__main__otherBlock__contentBox__content
+        .skills__main__otherBlock__contentBox__content--icon
           =embedded_svg("icons/visualstudio.svg",class:"svgIcon")
-        .skills__main__lowerBlock__contentBox__content--name
+        .skills__main__otherBlock__contentBox__content--name
           %h2 VS CODE
