--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -6,36 +6,21 @@
           =embedded_svg(skill.icon,class:"svgIcon")
         .skills__main__upperBlock__contentBox--name
           %h2=skill.name
-  .skills__main__lowerBlock
-    .skills__main__lowerBlock--name
-      %h1 RUBY
-    .skills__main__lowerBlock__content
-      .skills__main__lowerBlock__content--leftCircle
-      .skills__main__lowerBlock__content--centerName
-        furima
-      .skills__main__lowerBlock__content__rightBtn
-        %h2.skills__main__lowerBlock__content__rightBtn--text 
-          SHOW MORE
-        .skills__main__lowerBlock__content__rightBtn--icon 
-          =fa_icon "long-arrow-right"
-    .skills__main__lowerBlock__content
-      .skills__main__lowerBlock__content--leftCircle
-      .skills__main__lowerBlock__content--centerName
-        AAAAA
-      .skills__main__lowerBlock__content__rightBtn
-        %h2.skills__main__lowerBlock__content__rightBtn--text 
-          SHOW MORE
-        .skills__main__lowerBlock__content__rightBtn--icon 
-          =fa_icon "long-arrow-right"
-    .skills__main__lowerBlock__content
-      .skills__main__lowerBlock__content--leftCircle
-      .skills__main__lowerBlock__content--centerName
-        BBBBB
-      .skills__main__lowerBlock__content__rightBtn
-        %h2.skills__main__lowerBlock__content__rightBtn--text 
-          SHOW MORE
-        .skills__main__lowerBlock__content__rightBtn--icon 
-          =fa_icon "long-arrow-right"
+  -@categories.each do |skill|
+    .skills__main__lowerBlock
+      .skills__main__lowerBlock--name
+        %h1=skill.name
+      -skill.contents.each do |content|
+        .skills__main__lowerBlock__content
+          .skills__main__lowerBlock__content--leftCircle
+          .skills__main__lowerBlock__content--centerName
+            =content.name
+          =link_to(content_path(content.id)) do
+            .skills__main__lowerBlock__content__rightBtn
+              %h2.skills__main__lowerBlock__content__rightBtn--text 
+                SHOW MORE
+              .skills__main__lowerBlock__content__rightBtn--icon 
+                =fa_icon "long-arrow-right"
   .skills__main__otherBlock
     .skills__main__otherBlock--heading
       %h2 THE OTHERS
