--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -10,6 +10,8 @@
     .skills__main__lowerBlock
       .skills__main__lowerBlock--name
         %h1=skill.name
+      .skills__main__lowerBlock--deleteBtn
+        =fa_icon "plus"
       -skill.contents.each do |content|
         .skills__main__lowerBlock__content
           .skills__main__lowerBlock__content--leftCircle
