--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -1,4 +1,6 @@
 .skills__main
+  .skills__main--message
+    CLICK ICON for more info
   %ul.skills__main__upperBlock
     -@categories.each do |skill|
       %li.skills__main__upperBlock__contentBox
@@ -27,7 +29,7 @@
       - else
         .skills__main__lowerBlock__content
           .skills__main__lowerBlock__content--centerName
-            NOW STUDYING...
+            NOW STUDYING ...
   .skills__main__otherBlock
     .skills__main__otherBlock--heading
       %h2 THE OTHERS
