--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -209,6 +209,20 @@
     width: 100%;
     height: 65vh;
     position: relative;
+    &--message{
+      background-color: $base2;
+      color: $base3;
+      font-family: "roboto";
+      text-align: center;
+      position: absolute;
+        bottom: 13.5%;
+        left: 75%;
+        transform: translateY(-50%)translateX(-50%);
+      width: 14vw;
+      height:5vh;
+      line-height: 5vh;
+      border-radius: 2.5vh;
+    }
 // upper------------------------------------------------
     &__upperBlock{
       // background-color: red;
