--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -303,61 +303,66 @@
           -webkit-text-stroke: 6px $base2;
         }
       }
-      &__content{
-        margin: 0 auto 1vh;
-        width: 80%;
-        height: 8vh;
-        position: relative;
-        &--leftCircle{
-          position: absolute;
-            top: 50%;
-            left: 2vh;
-            transform: translateX(-50%)translateY(-50%);
-          width: 0.5vh;
-          height: 0.5vh;
-          border-radius: 50%;
-          background-color: $base2;
-          border: solid 2px $base3;
-        }
-        &--centerName{
-          position: absolute;
-            top: 50%;
-            left: 4vh;
-            transform: translateY(-50%);
-          width: 50%;
-          height: 7vh;
-          line-height: 7vh;
-          font-size: 2vh;
-          font-family: "roboto";
-          font-weight: 400;
-          color:$base3;
-        }
-        &__rightBtn{
-          border-radius: 4vh;
-          position: absolute;
-            right: 0;
-          height: 7vh;
-          width: 18vw;
-          background-color: $base3;
-          &--text{
-            line-height: 7vh;
-            margin-left: 1.5vw;
-          }
-          &--icon{
+      &__wrapper{
+        overflow-y:scroll;
+        width: 100%;
+        max-height: 27vh;
+        &__content{
+          margin: 0 auto 1vh;
+          width: 80%;
+          height: 8vh;
+          position: relative;
+          &--leftCircle{
             position: absolute;
               top: 50%;
-              right: 0.5vh;
-              transform:translateY(-50%);
-            width: 6vh;
-            height: 6vh;
+              left: 2vh;
+              transform: translateX(-50%)translateY(-50%);
+            width: 0.5vh;
+            height: 0.5vh;
             border-radius: 50%;
-            border: solid 1px $base2;
-            overflow: hidden;
-            i{
-              @include position-center;
-              color: $base2;
-              font-size: 3em;
-              -webkit-text-stroke: 3.5px $base3;
+            background-color: $base2;
+            border: solid 2px $base3;
+          }
+          &--centerName{
+            position: absolute;
+              top: 50%;
+              left: 4vh;
+              transform: translateY(-50%);
+            width: 50%;
+            height: 7vh;
+            line-height: 7vh;
+            font-size: 2vh;
+            font-family: "roboto";
+            font-weight: 400;
+            color:$base3;
+          }
+          &__rightBtn{
+            border-radius: 4vh;
+            position: absolute;
+              right: 0;
+            height: 7vh;
+            width: 18vw;
+            background-color: $base3;
+            &--text{
+              line-height: 7vh;
+              margin-left: 1.5vw;
+            }
+            &--icon{
+              position: absolute;
+                top: 50%;
+                right: 0.5vh;
+                transform:translateY(-50%);
+              width: 6vh;
+              height: 6vh;
+              border-radius: 50%;
+              border: solid 1px $base2;
+              overflow: hidden;
+              i{
+                @include position-center;
+                color: $base2;
+                font-size: 3em;
+                -webkit-text-stroke: 3.5px $base3;
+              }
             }
           }
         }
