--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -1,7 +1,7 @@
 #index{
   background-color: $base1;
   width: 100vw;
-  // overflow: hidden;
+  overflow: hidden;
 // top-contents================================================================================================
 .top{
   margin: 0 auto;
@@ -421,73 +421,73 @@
     line-height: 15vh;
     font-size: 5vh;
   }
-  &__contentsBox{
-    margin:0 auto;
-    width: 85%;
-    // photoblock------------------------------------------------
-    &__photoBlock{
-      width: 100%;
-      height: 50vh;
-      position: relative;
-      overflow: hidden;
-      img{
-        width:100%;
-        height:100%;
-        @include position-center;
-      }
-      &--filter{
-        display: none;
-        @include position-center;
-        width: 45vh;
+  &__main{
+    background-color: $base3;
+    margin-bottom: 10vh;
+    border-radius: 20px;
+    width: 100%;
+    height: 200vh;
+    padding: 10vh 0 0;
+    position: relative;
+    &__contentsBox{
+      margin: 0 auto;
+      width: 75%;
+      border-bottom: 1px solid $base1;
+      &__upperBlock{
+        width: 100%;
         height: 45vh;
-        line-height: 45vh;
-        text-align: center;
-        cursor: pointer;
-        font-size: 3vh;
-        color: $black;
-        background-color: rgba($color: white, $alpha: 0.95);
-        border: $black solid 0.5px;
-      }
-    }
-    // textblock------------------------------------------------
-    &__textBlock{
-      width: 100%;
-      height: 20vh;
-      display: none;
-      &__left{
-        width: 73.5%;
-        &--name{
-          height:12vh;
-          line-height: 12vh;
-          font-size: 2.7vh;
-          font-weight: bold;
+        display: flex;
+        &__textBox{
+          width: 20%;
+          height: 45vh;
+          line-height: 45vh;
         }
-        table{
-          width: 100%;
-          height: 8vh;
-          font-size: 1.5vh;
-          th{
-            text-align: start;
-            width: 20%;
-          }
-          td{
-            color: $gray;
+        &__imageBox{
+          height: 45vh;
+          width: 80%;
+          position: relative;
+          img{
+            @include position-center;
+            width: 100%;
+            height: 100%;
           }
         }
       }
-      &__right{
-        width: 26.5%;
+      &__lowerBlock{
+        // display: none;
+        // background-color: gray;
+        margin:0 auto;
+        width: 100%;
+        height: 20vh;
         position: relative;
+        margin-bottom: 3vh;
+        &--topText{
+          // background-color: #fff;
+          width: 100%;
+          height: 10vh;
+          line-height: 10vh;
+          font-size: 2.5vh;
+        }
+        &__infomations{
+          width: 50%;
+          height: 10vh;
+          // background-color: gray;
+          tr{
+            height: 5vh;
+            line-height: 5vh;
+            text-align: left;
+            th{
+              width: 30%;
+            }
+            td{
+              width: 70%;
+            }
+          }
+        }
+        &__linkBtn{}
       }
     }
   }
-}
-
-.separateLine{
-  width: 100vw;
-  height: 1px;
-  background-color: $gray;
-  margin-top: 8vh;
 }
 // ================================================
 }
