--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -1,26 +1,21 @@
-.works__contentsBox
-  .works__contentsBox__photoBlock
-    =image_tag(content.topImage.to_s)
-    .works__contentsBox__photoBlock--filter.filter
-      =content.name
-  .works__contentsBox__textBlock
-    .works__contentsBox__textBlock__left
-      .works__contentsBox__textBlock__left--name
-        =content.catchcopy
-      %table.works__contentsBox__textBlock__left__info
+.works__main
+  .works__main__contentsBox
+    .works__main__contentsBox__upperBlock
+      .works__main__contentsBox__upperBlock__textBox
+        %h2 FURIMA
+      .works__main__contentsBox__upperBlock__imageBox
+        =image_tag("/uploads/content/overview/2/overview.png")
+    .works__main__contentsBox__lowerBlock
+      .works__main__contentsBox__lowerBlock--topText
+        初めてのアプリケーション。
+      %table.works__main__contentsBox__lowerBlock__infomations
         %tr
           %th DATE
-          %td="#{content.created_at.strftime('%Y.%m')}"
+          %td 2020.04
         %tr
           %th LANGUAGE
-          %td 
-            -content.categories.each do|language|
-              ="#{language.name}"
-    .works__contentsBox__textBlock__right
-      =link_to(content_path(content.id)) do
-        .works__contentsBox__textBlock__right__moreBtn.linkBtn
-          %h2 DITAIL
-          .works__contentsBox__textBlock__right__moreBtn--icon.arrow
-            =fa_icon "long-arrow-right"
-.separateLine
-
+          %td ruby,HTML
+      .works__main__contentsBox__lowerBlock__linkBtn
+  .works__main__contentsBox
+    .works__main__contentsBox__upperBlock
+    .works__main__contentsBox__lowerBlock
